[rocksdb] Added support for RocksDB Java API

--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -68,6 +68,7 @@ rados:com.yahoo.ycsb.db.RadosClient
 redis:com.yahoo.ycsb.db.RedisClient
 rest:com.yahoo.ycsb.webservice.rest.RestClient
 riak:com.yahoo.ycsb.db.riak.RiakKVClient
+rocksdb:com.yahoo.ycsb.db.rocksdb.RocksDBClient
 s3:com.yahoo.ycsb.db.S3Client
 solr:com.yahoo.ycsb.db.solr.SolrClient
 solr6:com.yahoo.ycsb.db.solr6.SolrClient
